--- a/main.css
+++ b/main.css
@@ -105,6 +105,10 @@
 .offCanvas_btns .go_cart_btn:hover{
     color: #278528;
 }
+.header_color{
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .25);
+}
 .list-navbar .nav-item{
     font-size: 0.875rem;
 }
@@ -114,6 +118,25 @@
 .list-navbar .nav-link:hover{
     color: #fff;
 }
+.list-navbar .navbar-text{
+    color: #fff;
+}
+.header_color .nav-link {
+    color: #333;
+}
+.header_color .nav-link.active {
+    color: #333 ;
+}
+.header_color .navbar-text {
+    color: #333 ;
+}
+.header_color .nav-link:hover {
+    color: #000; 
+}
+.header_color .navbar-text {
+    color: #333;
+}
+
 .list-navbar .chevron_img{
     width: 1rem;
     height: 1rem;
