Add modal using JS to the main page

--- a/main.css
+++ b/main.css
@@ -313,6 +313,30 @@
     color: #999999;
 }
 /****************************************/
+.js-modal{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.9s;
+    backdrop-filter: blur(8px);
+}
+.show{
+    opacity: 1;
+    visibility: visible;
+}
+.modal_dialog{
+    max-width: 70%;
+    margin: auto;
+}
 .madal_title .modal_stock{
     color: #2C742F;
     background-color: rgba(32, 181, 38, 0.20);
